[gd_scene load_steps=9 format=2]

[ext_resource path="res://UI/QuestLog/GoldIcon.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/questlog-v1.png" type="Texture" id=2]
[ext_resource path="res://UI/QuestLog/QuestLog.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/Gold/4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/PixelRPG.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/TinyUnicode.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=2]
size = 6
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 6 )

[node name="QuestLog" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Frame" type="TextureRect" parent="."]
margin_left = 104.0
margin_top = 27.0
margin_right = 224.0
margin_bottom = 177.0
texture = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 110.0
margin_top = 33.0
margin_right = 218.0
margin_bottom = 75.0
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="Description" type="Label" parent="."]
margin_left = 110.0
margin_top = 83.0
margin_right = 219.0
margin_bottom = 150.0
custom_fonts/font = SubResource( 2 )
text = "You have no quests."
autowrap = true
clip_text = true

[node name="RewardsLabel" type="Label" parent="."]
margin_left = 111.0
margin_top = 141.0
margin_right = 146.0
margin_bottom = 157.0
custom_fonts/font = SubResource( 3 )
text = "Rewards"

[node name="GoldIcon" type="TextureRect" parent="."]
margin_left = 109.0
margin_top = 155.0
margin_right = 125.0
margin_bottom = 171.0
texture = ExtResource( 4 )
script = ExtResource( 1 )

[node name="GoldReward" type="Label" parent="."]
margin_left = 126.0
margin_top = 162.0
margin_right = 150.0
margin_bottom = 171.0
custom_fonts/font = SubResource( 2 )
text = "0
"
autowrap = true
clip_text = true

[node name="ItemRewards" type="HBoxContainer" parent="."]
margin_left = 144.0
margin_top = 154.0
margin_right = 220.0
margin_bottom = 173.0
custom_constants/separation = 3
